--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 easydict==1.13
 pyyaml==6.0.2
-python-dotenv=1.0.1
+python-dotenv==1.0.1
 langchain==0.3.14
 langchain-openai==0.2.14
 neo4j==5.27.0
